# MLOPS-FinalProject

./: .flake8  .gitignore  .pylintrc  Final_Project.txt  LICENSE  Makefile  README.md  download_data.sh  example_transaction.json  generate_traffic.sh  pyproject.toml  quickstart.sh  requirements-minimal.txt  requirements.txt
.github/workflows/: cicd.yml  deploy.yml  test.yml  train.yml
airflow/dags/: fraud_detection_dag.py
app/: app.py  requirements.txt
artifacts/: optimal_threshold.txt
docker/: Dockerfile  docker-compose.yml
models/: fraud_detector.json  fraud_detector_calibrated.pkl  optimal_threshold.pkl  scaler.pkl
monitoring/: alert_rules.yml  prometheus.yml
reports/: EDA_Report.md  FINAL_PROJECT_REPORT.md  FINAL_PROJECT_REPORT.tex  FINAL_REPORT_EN.tex  Final_Report.md
scripts/: long_running_traffic.py  simulate_traffic.py  trigger_retraining.sh
src/: __init__.py
src/api/: main.py
src/api/templates/: index.html
src/data/: eda.py  preprocessing.py
src/models/: __init__.py  inference.py  tabnet_train.py  train.py
src/monitoring/: metrics.py
tests/: test_api.py  test_inference.py  test_preprocessing.py
