[project]
name = "mlops-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "gradio==3.50.2",
    "kaggle==1.6.6",
    "matplotlib==3.8.2",
    "mlflow==2.10.0",
    "numpy==1.26.3",
    "optuna==3.5.0",
    "pandas==2.2.0",
    "prometheus-client==0.19.0",
    "pydantic==2.5.3",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "scikit-learn==1.4.0",
    "seaborn==0.13.1",
    "shap==0.44.1",
    "uvicorn[standard]==0.27.0",
    "xgboost==2.0.3",
    "setuptools",
    "requests",
    "python-multipart",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
]
